SourceOrg/src/objects/Source_Organization__c.object
<CustomObject>
    <description>Organization data flowing into Salesforce or imported  from one of the multiple Source Systems (Including but not limited to PS Financials, Advance, Reggie, Sofia)</description>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <description>Address for communication - Line 1</description>
        <label>Address Line1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line2__c</fullName>
        <description>Address for communication - Line 2</description>
        <label>Address Line2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALC_MasterOrg_ID__c</fullName>
        <description>Field used for reports - not used anywhere else</description>
        <formula>Master_Organization__r.Id</formula>
        <inlineHelpText>Field used for reports - not used anywhere else</inlineHelpText>
        <label>CALC MasterOrg ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Name Of City</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CollaborativePolicyChangingActivities__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Manual Entry -  # CollaborativePolicyChangingActivities</description>
        <inlineHelpText>Manual Entry -  # CollaborativePolicyChangingActivities</inlineHelpText>
        <label># CollaborativePolicyChangingActivities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Savings__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum Of $ Cost Saving From All Related Interactions</description>
        <inlineHelpText>Sum Of $ Cost Saving From All Related Interactions</inlineHelpText>
        <label>$ Cost Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Address for communication - Country</description>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_From_SBIR_STTR_Grants__c</fullName>
        <defaultValue>0</defaultValue>
        <label>$ From SBIR/STTR Grants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D_Generated_From_Licenses__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Manual Entry - $ Generated from Active Licenses</description>
        <inlineHelpText>Manual Entry - $ Generated from Active Licenses</inlineHelpText>
        <label>$ Generated From Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Source Organization Primary Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Endowment_Active_Proposals__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of all active Endowment fundraising initiatives (Advance &quot;proposals&quot;)</description>
        <inlineHelpText>Count of all active Endowment fundraising initiatives (Advance &quot;proposals&quot;)</inlineHelpText>
        <label>Endowment Active Proposals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endowment_Contact_Reports_Visits__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of contact report visits recorded by Endowment</description>
        <inlineHelpText>Count of contact report visits recorded by Endowment</inlineHelpText>
        <label>Endowment Contact Reports Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endowment_Contact_Reports__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of all contact reports recorded by Endowment</description>
        <inlineHelpText>Count of all contact reports recorded by Endowment</inlineHelpText>
        <label>Endowment Contact Reports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endowment_Gitft_Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Endowment Gift Total For Each Organization - This is a one to one mapping with Endowment ID</description>
        <inlineHelpText>Endowment Gift Total For Each Organization - This is a one to one mapping with Endowment ID</inlineHelpText>
        <label>Endowment Unit Gift Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Endowment_KnownAlumniCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Count of known alumni employees - Received from Endowment DB</description>
        <inlineHelpText>Count of known alumni employees - Received from Endowment DB</inlineHelpText>
        <label>Endowment KnownAlumniCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endowment_KnownNonAlumniCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Known living non-alumni donors linked to organization ID as employees - Received from Endowment DB</description>
        <inlineHelpText>Known living non-alumni donors linked to organization ID as employees - Received from Endowment DB</inlineHelpText>
        <label>Endowment KnownNonAlumniCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Endowment_Last_Contact_Date__c</fullName>
        <description>Date of most recent contact report</description>
        <inlineHelpText>Date of most recent contact report</inlineHelpText>
        <label>Endowment Last Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endowment_Last_Contact_Description__c</fullName>
        <description>Very brief one-line summary of last contact</description>
        <inlineHelpText>Very brief one-line summary of last contact</inlineHelpText>
        <label>Endowment Last Contact Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Endowment_Last_Contact_Purpose__c</fullName>
        <description>Code description - purpose of last contact</description>
        <inlineHelpText>Code description - purpose of last contact</inlineHelpText>
        <label>Endowment Last Contact Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Purpose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Major Gift Solicitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitation - Major Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provide/Request Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Endowment_Last_Contact_Type__c</fullName>
        <description>Code description - type of last contact</description>
        <inlineHelpText>Code description - type of last contact</inlineHelpText>
        <label>Endowment Last Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call/Letter/Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Contact Move</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Endowment_Last_Gift_Date__c</fullName>
        <description>Date of most recent legal gift recorded</description>
        <inlineHelpText>Date of most recent legal gift recorded</inlineHelpText>
        <label>Endowment Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endowment_Last_Match_Date__c</fullName>
        <description>Date of most recent matching gift</description>
        <inlineHelpText>Date of most recent matching gift</inlineHelpText>
        <label>Endowment Last Match Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Endowment_Latest_Stage__c</fullName>
        <description>Description of most advanced stage of active fundraising initiatives</description>
        <inlineHelpText>Description of most advanced stage of active fundraising initiatives</inlineHelpText>
        <label>Endowment Latest Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ask Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate (Entity Deceased)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long-term Cultiv/Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stewardship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <description>Business Entity Type</description>
        <inlineHelpText>Select Business Entity Type</inlineHelpText>
        <label>Entity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private For-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FPrimary_Source_Org_Flag__c</fullName>
        <description>Hidden Field - Used as a Flag to indicate that a SourceOrganization has been marked as &quot;Primary&quot;</description>
        <formula>IF( Primary_Source_Org__c = True, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden Field - Used as a Flag to indicate that a SourceOrganization has been marked as &quot;Primary&quot;</inlineHelpText>
        <label>Primary Source Organization Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTE_Located_In_KU_BTBC__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Input the # of FTE in BTBC</description>
        <inlineHelpText>Input the # of FTE in BTBC</inlineHelpText>
        <label># FTE Located In KU BTBC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_External_Investment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>$ of external investment into the company.</description>
        <inlineHelpText>$ of external investment into the company.</inlineHelpText>
        <label>$ From External Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>From_Leased_Equipment__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Funds received from companies who have leased KU equipment.</description>
        <inlineHelpText>Funds received from companies who have leased KU equipment.</inlineHelpText>
        <label>$ From Leased Equipment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Generated_From_Joint_Patents__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Manual Entry -  $ Generated From Joint Patents</description>
        <inlineHelpText>Manual Entry -  $ Generated From Joint Patents</inlineHelpText>
        <label>$ Generated From Joint Patents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IT_Vendor_Spending__c</fullName>
        <defaultValue>0</defaultValue>
        <description>$ IT Vendor Spending for Key IT Vendors</description>
        <inlineHelpText>$ IT Vendor Spending for Key IT Vendors</inlineHelpText>
        <label>$ IT Vendor Spending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this Organization Data is active or not valid/updated anymore. This will be Unchecked by default. This will be checked based on input from the source systems if any of the data is flagged as invalid/duplicate. Only KU Admins can edit this field.</description>
        <inlineHelpText>Check this box only if the source data record has been deleted (purged) or has been merged with another record and is not going to be updated in future. This can be unchecked if the record gets restored/added and will continue getting updates.</inlineHelpText>
        <label>Inactive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interviews_on_Campus__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Interviews On Campus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Endowment_Unit_Matching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the Organization match employee contribution</description>
        <inlineHelpText>Does the Organization match employee contribution</inlineHelpText>
        <label>Endowment Unit Matching?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_KU_A_Strategic_Hiring_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is KU considered a strategic hiring partner by the Company?</description>
        <inlineHelpText>Is KU considered a strategic hiring partner by the Company?</inlineHelpText>
        <label>Is KU A Strategic Hiring Partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_KU_Spinoff_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if the Company is a KU Spinoff Company</description>
        <inlineHelpText>Check this if the Company is a KU Spinoff Company</inlineHelpText>
        <label>Is KU Spinoff Company?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Master_RA_In_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this if the Master RA is in place for the Organization</description>
        <inlineHelpText>Select this if the Master RA is in place for the Organization</inlineHelpText>
        <label>Is Master RA In Place?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legth_Relationship_From_Source_Org__c</fullName>
        <formula>IF( 
AND( 
ISNULL( Length_Relationship_In_Source_Org_Level__c ), 
ISNULL( Longest_length_Relation_From_Interaction__c )
), 
0, 
MAX( Length_Relationship_In_Source_Org_Level__c, Longest_length_Relation_From_Interaction__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length Relationship From Source Org</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_Relationship_In_Source_Org_Level__c</fullName>
        <formula>IF( 
AND( 
ISNULL( Endowment_Last_Contact_Date__c ), 
ISNULL( Endowment_Last_Gift_Date__c ),   
ISNULL( Endowment_Last_Match_Date__c ),  
ISNULL( LastActivityDate ),
ISNULL( Source_System_Created_Date__c ),
ISNULL( Source_System_Last_Modified_Date__c )
), 
0, 
MAX( 
IF(ISNULL( Endowment_Last_Contact_Date__c ),0,TODAY() - Endowment_Last_Contact_Date__c), 
IF(ISNULL( Endowment_Last_Gift_Date__c ),0,TODAY() - Endowment_Last_Gift_Date__c ), 
IF(ISNULL( Endowment_Last_Match_Date__c ),0,TODAY() - Endowment_Last_Match_Date__c  ), 
IF(ISNULL( LastActivityDate ),0,TODAY() - LastActivityDate ), 
IF(ISNULL( Source_System_Created_Date__c ),0,TODAY() - Source_System_Created_Date__c ),
IF(ISNULL( Source_System_Last_Modified_Date__c ),0,TODAY() - Source_System_Last_Modified_Date__c )
))</formula>
        <label>Length Relationship In Source Org Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Revenue_From_Spin_Off__c</fullName>
        <defaultValue>0</defaultValue>
        <description>$ Licensing revenue from KU Spin-off companies. Value not shown.</description>
        <inlineHelpText>$ Licensing revenue from KU Spin-off companies. Value not shown.</inlineHelpText>
        <label>$ License Revenue From Spin-Off</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Longest_length_Relation_From_Interaction__c</fullName>
        <label>Longest length Relation From Interaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_Organization__c</fullName>
        <description>This is the Master Organization that the Source Organization is an entity/part of</description>
        <label>Master Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Source Organizations</relationshipLabel>
        <relationshipName>Related_Organizations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mof_Sponsored_Research_Awards__c</fullName>
        <label>$ Of Sponsored Research Awards</label>
        <summarizedField>Interaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Interaction__c.Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Research Grant</value>
        </summaryFilterItems>
        <summaryForeignKey>Interaction__c.Source_Organization__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mof_service_agreements__c</fullName>
        <label>$ Of Service Agreements</label>
        <summarizedField>Interaction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Interaction__c.Interaction_Type__c</field>
            <operation>equals</operation>
            <value>Service Agreement</value>
        </summaryFilterItems>
        <summaryForeignKey>Interaction__c.Source_Organization__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>N_COKeyExecutiveVisitsToKU__c</fullName>
        <defaultValue>0</defaultValue>
        <label># CO Key Executive Visits To KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_KUVisitsToCOHQ__c</fullName>
        <defaultValue>0</defaultValue>
        <label># KU Visits To CO HQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfCallsToFirm__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Calls To Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfEmailsToFirm__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Emails To Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfFirmExpertVisitsToUniversity__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Firm Expert Visits To University</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfJointInventionDisclosuresReceive__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Joint Invention Disclosures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfJointPCTPatentsFiled__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Joint PCT Patents Filed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfJointPCTPatentsIssued__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Joint PCT Patents Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfJointPatentsFiled__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Joint Patents Filed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfJointPatentsIssued__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Joint Patents Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_OfUniversityResearcherstoFirmsForSabb__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Rollup From Agreement Type = Visiting Scientist</description>
        <inlineHelpText>Rollup From Agreement Type = Visiting Scientist</inlineHelpText>
        <label># Of KU Researchers For Sabbatical</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_ofjointsupervisorsofPhDandMasterThesis__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Joint Supervisors Of PhD &amp; Masters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_Citations_For_Published_Research__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Manual Entry - # of citations for university-firm published research</description>
        <inlineHelpText># Joint publications with the company and KU faculty as authors</inlineHelpText>
        <label># Of Citations For Published Research</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_Courses_With_Firm_Input__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of KU classes for which the company has had input.</description>
        <inlineHelpText># of KU classes for which the company has had input.</inlineHelpText>
        <label># Of Courses With Firm Input</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_Firm_Collaborations_With_Other_Univ__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of company collaboration with other universities.</description>
        <inlineHelpText># of company collaboration with other universities.</inlineHelpText>
        <label># Of Firm Collaborations With Other Univ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_KU_Alumni_On_Firm_Board__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of KU Alumni on the Company&apos;s Board of Directors.</description>
        <inlineHelpText># of KU Alumni on the Company&apos;s Board of Directors.</inlineHelpText>
        <label># Of KU Alumni On Firm Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_KU_Facilities_Used_By_Firm__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Manual Entry - # OfKUFacilitiesUsedByFirm</description>
        <inlineHelpText>Manual Entry - # OfKUFacilitiesUsedByFirm</inlineHelpText>
        <label># Of KU Facilities Used By Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_KU_Faculty_Consulting_For_Firm__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Manual Entry - # of KU faculty and staff consulting for firm</description>
        <inlineHelpText># KU faculty/staff consulting for the company</inlineHelpText>
        <label># Of KU Faculty Consulting For Firm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_KU_Faculty_On_Firm_Board__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of KU faculty on the Company&apos;s Board of Directors.</description>
        <inlineHelpText># of KU faculty on the Company&apos;s Board of Directors.</inlineHelpText>
        <label># Of KU Faculty On Firm Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_Key_Leadership_Alumni__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total # Of Key/Leadership Alumni From All Related Contacts</description>
        <inlineHelpText>Total # Of Key/Leadership Alumni From All Related Contacts</inlineHelpText>
        <label># Of Key/Leadership Alumni</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_Key_Non_Alumni_On_Firm_Board__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Manual Entry - # of Key non-alumni on firm board</description>
        <inlineHelpText># Directors, VP, C-Suite friends of KU (non-alumni) on company board.</inlineHelpText>
        <label># Of Key Non-Alumni On Firm Board</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_NewsStories_Of_Firm_KU_Partnership__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Manual Entry # of news stories of firm and KU partnership</description>
        <inlineHelpText>Manual Entry # of news stories of firm and KU partnership</inlineHelpText>
        <label># Of NewsStories Of Firm-KU Partnership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_Seminars_Given_By_Firm_At_KU__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Manual Entry - # Of Seminars Given By Firm At KU</description>
        <inlineHelpText>Manual Entry - # Of Seminars Given By Firm At KU</inlineHelpText>
        <label># Of Seminars Given By Firm At KU</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_Sponsored_Professorships__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Sponsored Professorships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_Sponsored_Research_Proposals__c</fullName>
        <defaultValue>0</defaultValue>
        <description># Of Sponsored Research Proposals</description>
        <inlineHelpText># Of Sponsored Research Proposals</inlineHelpText>
        <label># Of Sponsored Research Proposals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_Times_KU_Equipment_Leased__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of times KU equipment has been leased by a company.</description>
        <inlineHelpText># KU facilities used by the company</inlineHelpText>
        <label># Of Times KU Equipment Leased</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_University_Colleges_Collaborating__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of major entities collaborating with the Company.</description>
        <inlineHelpText># of major entities collaborating with the Company.</inlineHelpText>
        <label># Of MajorEntities CollaboratingWithFirm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Alias__c</fullName>
        <description>Organization Alias</description>
        <inlineHelpText>Optionally, enter an Alias</inlineHelpText>
        <label>Source Organization Alias</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Organization_Division__c</fullName>
        <description>Company Division</description>
        <inlineHelpText>Company Division</inlineHelpText>
        <label>Source Organization Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Short_Name__c</fullName>
        <description>Organization Short Name</description>
        <inlineHelpText>Organization Short Name</inlineHelpText>
        <label>Source Organization Short Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Source_System_ID__c</fullName>
        <description>Unique ID of Organization from Source System - Applicable only for imported Organizations</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID of Organization from Source System - Applicable only for imported Organizations</inlineHelpText>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Source Organization Phone Number</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Address For Communication - Postal Code</description>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Source_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to Flag one of the Source Organizations related to a Master Organization as &quot;Primary&quot;.
Checked if this is Primary Source Org for the Master.</description>
        <inlineHelpText>Used to Flag one of the Source Organizations related to a Master Organization as &quot;Primary&quot;. Check this if this is Primary Source Org for the Master</inlineHelpText>
        <label>Primary Source Org?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RU_Count_Master_RA_Src__c</fullName>
        <description>Hidden field to count Master RA</description>
        <formula>IF(Is_Master_RA_In_Place__c = True, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field to count Master RA</inlineHelpText>
        <label>RU Count Master RA Src</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RU_Count_Strategic_Hiring_Partner_Src__c</fullName>
        <description>Hidden Field To Count Strategic Partner Designation</description>
        <formula>IF(Is_KU_A_Strategic_Hiring_Partner__c = True,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden Field To Count Strategic Partner Designation</inlineHelpText>
        <label>RU Count Strategic Hiring Partner Src</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RV_Spinoff_Count__c</fullName>
        <description>This is a hidden field used to calculate the number of spinoff companies at the Master Org using Rollup. This is set to 1 if any Source Org is a Spin Off Company.</description>
        <formula>IF((Is_KU_Spinoff_Company__c = True),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a hidden field used to calculate the number of spinoff companies at the Master Org using Rollup. This is set to 1 if any Source Org is a Spin Off Company.</inlineHelpText>
        <label>RV Spinoff Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>